Can successfully query db

--- a/index.html
+++ b/index.html
@@ -1,26 +1,44 @@
 <!DOCTYPE html>
 <html>
+	<head>
+		<style>
+			.button {
+				background-color: #4CAF50;
+				border: none;
+				color: white;
+				padding: 15px 32px;
+				text-align: center;
+				text-decoration: none;
+				display: inline-block;
+				font-size: 16px;
+				margin: 4px 2px;
+				cursor: pointer;
+			}
+		</style>
+	</head>
 	<title>It's a Title!</title>
 	<body>
 		<p>Hello world!</p>
+		<input type="button" class = "button" value="Execute SELECT on User table" onclick="execute()"/>
 		<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 		<!-- Compiled and minified JavaScript -->
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.1/js/materialize.min.js"></script>
 		<script>
-			$.ajax({
-				url: 'test',
-				type: 'POST',
-				contentType: 'application/json; charset=utf-8',
-				dataType: 'json',
-				async: false,
-				success: function (msg) {
-					$("#comments").modal('close');
-				},
-				error: function(err){
-					alert("Not your comment!");
-				}
-			});
-		
+			function execute() {
+				$.ajax({
+					url: 'test',
+					type: 'POST',
+					contentType: 'application/json; charset=utf-8',
+					dataType: 'json',
+					async: false,
+					success: function (msg) {
+						alert(msg);
+					},
+					error: function(err){
+						alert("COMPLETE FAILRUE");
+					}
+				});
+			};
 		</script>
 	</body>
 </html>
