Changed the name of a POST method

--- a/signup.html
+++ b/signup.html
@@ -76,7 +76,7 @@
 				alert("made it here");
 				
 				$.ajax({
-					url: 'poop',
+					url: 'signup',
 					type: 'POST',
 					data: JSON.stringify(data),
 					contentType: 'application/json; charset=utf-8',
