Hid login credentials in environment variables

--- a/login.html
+++ b/login.html
@@ -25,7 +25,7 @@
 		<label for="password">Password</label>
 		<br>
 		
-		<input type="button" class = "button" value="Register" onclick="execute()"/>
+		<input type="button" class = "button" value="Login" onclick="execute()"/>
 		<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 		<!-- Compiled and minified JavaScript -->
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.1/js/materialize.min.js"></script>
