--- a/public/signup.html
+++ b/public/signup.html
@@ -33,7 +33,7 @@
 		<input id="last" type="text"/>
 		<label for="last">Last Name</label>
 		<br>
-		<input id="email" type="text"/>
+		<input id="email" type="email"/>
 		<label for="email">Email Address</label>
 		<br>
 		
@@ -103,14 +103,10 @@
 			}
 			
 			function validEmail(email) {
-				var atCount = 0;
-				for(var i = 0; i < email.length; i++)
-					if(email[i] === '@')
-						atCount++;
-						
-				return atCount === 1 && email[0] !== '@' && email[email.length - 1] !== '@';
+				if(email.match(/^(([^<>()\[\]\\.,;:\s@"]+(\.[^<>()\[\]\\.,;:\s@"]+)*)|(".+"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/))
+					return true;
+				return false;
 			}
-			
 		</script>
 	</body>
 </html>
