--- a/public/signup.html
+++ b/public/signup.html
@@ -81,10 +81,12 @@
 					dataType: 'json',
 					async: false,
 					success: function (msg) {
-						if(!msg.err)
+						if(!msg.err) {
 							alert("You successfully signed up :)");
-						else
+							window.location.replace('/');
+						} else {
 							alert(msg.err);
+						}
 					},
 					error: function(err){
 						alert("COMPLETE FAILRUE");
