--- a/index.html
+++ b/index.html
@@ -22,5 +22,7 @@
 		<a href="/signup" class="button">Signup</a>
 		<br>
 		<a href="/login" class="button">Login</a>
+		<br>
+		<a href="/forgotPassword" class="button">Forgot Password?</a>
 	</body>
 </html>
