Upload link on homepage

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
 		<br>
 		<a href="/forgotPassword" class="button">Forgot Password?</a>
 		<br>
+		<a href="/upload" class="button">Upload Audio</a>
+		<br>
 		
 		<ul id="list">
 		</ul>
